#618: correct tests